apply plugin: 'com.android.application'


android {

    compileSdkVersion 34
    defaultConfig {
        applicationId "com.hm.greencity.customermanagement"
        minSdkVersion 19
        targetSdkVersion 34
        versionCode 11
        versionName "1.11"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'

    }

    buildFeatures{
        viewBinding= true
    }

    buildTypes {
        debug {
            buildConfigField "String", "BASE_URL", "\"https://crm.hmgreencity.com/\""
        }
        release {
//            buildConfigField "String", "BASE_URL", "\"http://demo1.afluex.com/webapi/\""
            buildConfigField "String", "BASE_URL", "\"https://crm.hmgreencity.com/\""
            lintOptions {
                disable 'MissingTranslation'
                checkReleaseBuilds false
                abortOnError false
            }
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            debuggable false
            jniDebuggable false
            renderscriptDebuggable false
        }
    }

    android {
        compileOptions {
            sourceCompatibility JavaVersion.VERSION_1_8
            targetCompatibility JavaVersion.VERSION_1_8
        }
    }
}

repositories {
    maven {
        google()
        jcenter()
        url "https://jitpack.io"
    }
    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
}

dependencies {

    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'com.google.android.material:material:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
//    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
    implementation 'io.github.inflationx:viewpump:2.0.3'
    implementation 'io.github.inflationx:calligraphy3:3.1.1'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.6.1'
    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
    implementation "com.github.bumptech.glide:glide:4.15.1"

    // Dialog -----------------------------------------------------
    implementation 'com.github.jrvansuita:PickImage:2.5.2'

    // Crop Image -----------------------------------------------------
    implementation "com.theartofdev.edmodo:android-image-cropper:2.8.0"
    implementation 'de.hdodenhof:circleimageview:3.1.0'

//pinch to zoom
    implementation 'com.github.MikeOrtiz:TouchImageView:3.1.1'
    implementation 'com.jakewharton:butterknife:10.2.3'
    androidTestImplementation 'org.testng:testng:6.9.6'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    testImplementation "junit:junit:4.13.2" // Updated to latest stable
    androidTestImplementation "androidx.test.ext:junit:1.1.5"
    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
    implementation 'com.squareup.picasso:picasso:2.8'




}
